--- a/src/css/Employees.css
+++ b/src/css/Employees.css
@@ -45,7 +45,8 @@ body {
 
 .team-select {
     width: 25rem;
-    padding: .5rem;
+    /* padding: .5rem; */
+    text-align: left;
 }
 
 hr {
@@ -69,6 +70,15 @@ hr {
     overflow: hidden;
     gap: .6rem;
     height: 17rem;
+}
+
+.employee-card-selected {
+    border: 3px solid black;
+}
+
+.employee-card:hover {
+    background-color: rgb(240, 240, 240);
+    cursor: pointer;
 }
 
 .employee-card > * {
